--- a/comprar.html
+++ b/comprar.html
@@ -115,7 +115,7 @@ function operar(value) {
     var merca = 'https://soysuper.com/search?q='+value+'&sort=price%3Aasc';   
     var lupa='https://www.lupaonline.com/logrono/catalogsearch/result/index/?cat=&dir=asc&order=price&q='+value;
     var bonarea='https://www.bonarea-online.com/es/shop/find?searchWords='+value;  
-    var dia='https://www.dia.es/compra-online/search?text='+value;
+    var dia='https://www.dia.es/search?q='+value;
     if (eroskiBasic =='basic') {
         var eroski='https://supermercado.eroski.es/es/search/results/?q='+value+'%20eroski%20basic';
     }else{
