--- a/assets/firma/firma_pro.html
+++ b/assets/firma/firma_pro.html
@@ -57,8 +57,8 @@
                 <a href="https://www.facebook.com/javier.diaz.garrido" target="_blank"><img width="16"
                         alt="Facebook icon" src="https://javierdiaz.com.es/assets/firma/fb.png"
                         style="border: 0; height: 16px; width: 16px" /></a>
-                <a href="https://twitter.com/heipry"                    target="_blank"><img width="16" alt="Twitter icon"
-                        src="https://javierdiaz.com.es/assets/firma/tt.png"
+                <a href="https://x.com/heipry"                    target="_blank"><img width="16" alt="X icon"
+                        src="https://javierdiaz.com.es/assets/firma/x.png"
                         style="border: 0; height: 16px; width: 16px" /></a>
                 <a href="https://github.com/Heipry"                    target="_blank"><img width="16" alt="GitHub icon" 
                         src="https://javierdiaz.com.es/assets/firma/gh.png"
